--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Survey Form</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body>
-
+<body class="bodysleeper">
+	<header id="title">
+		<h1>Survey Form</h1>
+	</header>
+	<div>
+		<p id="description">Let us know how we can improve freeCodeCamp</p>
+		<form id="survey-form">
+			<div id="table1">
+		    	<div class="formkiri"><label for="name" id="name-label">Name:</label></div>
+		    	<div class="formkanan"><input type="text" id="name" name="user_name" value="" placeholder="Enter your name"></div>
+		  	</div>
+		  	<div id="table1">
+		    	<div class="formkiri"><label for="email" id="email-label">Email:</label></div>
+		    	<div class="formkanan"><input type="email" id="mail" name="user_mail" placeholder="Enter your email"></div>
+		  	</div>
+		  	<div id="table1">
+		  		<div class="formkiri"><label for="age" id="age-number">Age:</label></div>
+		  		<div class="formkanan"><input type="number" id="age" name="age" min="1" max="120" placeholder="age"></div>
+		  	</div>
+		  	<div id="table1">
+		  		<div class="formkiri"><label>Which option best describes your current role?</label></div>
+		  		<div class="formkanan">s
+		  			<select id="dropdown" name="currentPos">
+		  				<option value="" disabled="">Select an option</option>
+		  				<option value="student">Student</option>
+		  				<option value="job">Full Time Job</option>
+		  				<option value="Learner">Full Time Learner</option>
+		  				<option value="Prefer">Prefer not say</option>
+		  				<option value="Other">Other</option>
+		  			</select>
+		  		</div>	
+		  	</div>
+		  	<div id="table1">
+		  		<div class="formkiri"><label>* How likely is that you would recommend freeCodeCamp to a friend?</label></div>
+		  		<div class="formkanan"></div>
+		  	</div>
+		</form>
+	</div>
 </body>
 </html>
